--- a/Credit Analysis Machine.html
+++ b/Credit Analysis Machine.html
@@ -99,12 +99,12 @@ function myFunction()
 </head>
 <body onload="notVisible()">
 <p style="text-align: center">
-<a href= "HelloWorld.html" id= "h1TAG" class ="header"> Credit Analysis Machine </a>
+<a href= "index.html" id= "h1TAG" class ="header"> Credit Analysis Machine </a>
 </p>
 
 <div class="topnav", id="myHeader">
 
-<a href="HelloWorld.html"> Home </a>
+<a href="index.html"> Home </a>
   <a href="Credit Analysis Machine.html">Credit Analysis Machine</a>
   <a id = "reason" href="about.html" >Why Blockchain?</a>
   <b href="index.html">Sign In with BlockStack</b>
