--- a/about.html
+++ b/about.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 	<p style="text-align: center">
-		<a href= "HelloWorld.html" id= "h1TAG" class ="header"> Credit Analysis Machine </a>
+		<a href= "index.html" id= "h1TAG" class ="header"> Credit Analysis Machine </a>
 	</p>
 	<div class="topnav" id="myHeader">
-<a href="HelloWorld.html"> Home </a>
+<a href="index.html"> Home </a>
   <a href="Credit Analysis Machine.html">Credit Analysis Machine</a>
   <a href="about.html">Why Blockchain?</a>
   </div>
